# hof

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  cmake_uninstall.cmake.in  cxx_warnings.cmake
benchmark/: CMakeLists.txt  all.bench.cc
clang-tidy/: all.yaml  fix-headers-only.yaml  tests.yaml
cmake-modules/: CodeCoverage.cmake  FindIIO.cmake  FindLIBGFLAGS.cmake  FindLIBZ.cmake  FindXML2.cmake
cmake-scripts/: clang-tidy-all.cmake  cross-tidy.cmake  cross.cmake  local-bench.cmake  local-clang-tidy-all.cmake  local-clang-tidy-with-tests.cmake  local-clang.cmake  local-coverage.cmake  local-tidy.cmake  local.cmake  local.g++13.2.0.cmake
git-hooks/: pre-commit
hof/: CMakeLists.txt  hof-config.cmake.in
hof/concepts/visitable/: visitable.cc  visitable.hh  visitable.test.cc
hof/dynamic_programming/: dynamic_programming.test.cc
hof/graph/: graph.cc  graph.hh  graph.test.cc
hof/lambda_wrapper/: lambda_wrapper.cc  lambda_wrapper.hh  lambda_wrapper.test.cc
hof/linked_list/: linked_list.cc  linked_list.hh  linked_list.test.cc
ide-configuration/tgm/: .cproject  .project
include-wrappers/: gflags-wrapper.hh  gtest-wrapper.hh
test/: CMakeLists.txt  alltests.test.cc  cpp.test.cc
